Bug 1272349 - Use already set value of kEnableSelectionRB bit instead of NSPrintSelectionOnly. r=haik

The kEnableSelectionRB flag is already set in nsPrintEngine code and the generic
nsPrintOptions::SerializeToPrintData() serializes this flags, so we don't need
to check NSPrintSelectionOnly and we don't need to override the kEnableSelectionRB
setting in nsPrintOptionsX::SerializeToPrintData().

MozReview-Commit-ID: I3iYdx5OQCp